feat(mail): add env variables for mailer

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ REDIS_HOST=""
 REDIS_PORT=""
 REDIS_PASS=""
 
+MAILER_HOST=""
+MAILER_PORT=""
+MAILER_USER=""
+MAILER_PASS=""
+
 SECRET_KEY=""
 
 GOOGLE_CLIENT_ID=""
