feat(mailer): add env for mailgun

--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ REDIS_HOST=""
 REDIS_PORT=""
 REDIS_PASS=""
 
-MAILER_HOST=""
-MAILER_PORT=""
-MAILER_USER=""
-MAILER_PASS=""
+MAILGUN_PRIVATE_API_KEY=""
+MAILGUN_API_BASE_URL=""
+MAILGUN_DOMAIN=""
+MAILGUN_FROM=""
 
 SECRET_KEY=""
 
