--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ ACCESS_TOKEN_AGE=3600
 REFRESH_TOKEN_AGE=604800
 
 GIN_MODE="release"
+
+FRONTEND_URL=""
+RESET_PASSWORD_URL="/reset-password?token="
