chore: update env

--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,5 @@ REFRESH_TOKEN_AGE=604800
 
 GIN_MODE="release"
 
-FRONTEND_URL=""
-RESET_PASSWORD_URL="/reset-password?token="
+FRONTEND_URL="http://localhost:5173"
+RESET_PASSWORD_URL="/change-password?token="
