feat: add merchant code

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ GOOGLE_CLIENT_ID=""
 ACCESS_TOKEN_AGE=3600
 REFRESH_TOKEN_AGE=604800
 
+MERCHANT_CODE=""
+
 GIN_MODE="release"
 
 FRONTEND_URL="http://localhost:5173"
