--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ GIN_MODE="release"
 
 FRONTEND_URL="http://localhost:5173"
 RESET_PASSWORD_URL="/change-password?token="
+
+ADMIN_EMAIL=""
+ADMIN_PASSWORD=""
